# dav1d

./: CMakeLists.txt  meson.build
.github/workflows/: build.yml
mesontest/: dotprod.S  i8mm.S  sve.S  sve2.S
src/: CMakeLists.txt
src/arm/: cpu.c
src/arm/64/: ipred.S  mc_dotprod.S
tests/checkasm/: CMakeLists.txt
tools/: CMakeLists.txt
